reduced the brightness of the general text colour

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -14,7 +14,7 @@
 @orange: #de935f;
 @light-orange: #f0c674;
 
-@general: white;
+@general: rgb(227, 227, 227);
 @numeric: rgb(228, 105, 105);
 @operator: @numeric;
 @keyword: rgb(119, 177, 251);
