--- a/styles/colors.less
+++ b/styles/colors.less
@@ -2,6 +2,7 @@
 
 @very-light-gray: #c5c8c6;
 @light-gray: #969896;
+@light-red: #f0866e;
 @gray: #373b41;
 @dark-gray: #282a2e;
 @very-dark-gray: #1d1f21;
