--- a/styles/base.less
+++ b/styles/base.less
@@ -70,7 +70,7 @@ atom-text-editor .search-results .marker.current-result .region,
   color: @purple;
 
   &.control {
-    color: @keyword;
+    color: @control;
   }
 
   &.operator {
