--- a/styles/colors.less
+++ b/styles/colors.less
@@ -19,3 +19,6 @@
 @numeric: rgb(228, 105, 105);
 @operator: @numeric;
 @keyword: rgb(119, 177, 251);
+
+@syntax-background-color: #000000;
+@control: #a2fa89;
