Change default colors

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,8 +1,8 @@
 @import "syntax-variables";
 
 atom-text-editor, :host {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
+  background-color: @custom-syntax-background-color;
+  color: @custom-syntax-text-color;
 
   .wrap-guide {
     background-color: @syntax-wrap-guide-color;
