--- a/styles/colors.less
+++ b/styles/colors.less
@@ -20,5 +20,6 @@
 @operator: @numeric;
 @keyword: rgb(119, 177, 251);
 
-@syntax-background-color: #000000;
+@custom-syntax-background-color: #000000;
+@custom-syntax-text-color: #fffff7;
 @control: #a2fa89;
