Change color for operator

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -17,7 +17,7 @@
 
 @general: rgb(227, 227, 227);
 @numeric: rgb(228, 105, 105);
-@operator: @numeric;
+@operator: #fffc47;
 @keyword: rgb(119, 177, 251);
 
 @custom-syntax-background-color: #000000;
