Change color storage

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -19,6 +19,7 @@
 @numeric: rgb(228, 105, 105);
 @operator: #fffc47;
 @keyword: rgb(119, 177, 251);
+@storage: #6ffcfc;
 
 @custom-syntax-background-color: #000000;
 @custom-syntax-text-color: #fffff7;
