--- a/styles/base.less
+++ b/styles/base.less
@@ -87,7 +87,7 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .storage {
-  color: @keyword;
+  color: @storage;
 }
 
 .constant {
